--- a/containers/Dockerfile.easyreg
+++ b/containers/Dockerfile.easyreg
@@ -1,30 +1,26 @@
-# Use QEMU for multi-architecture compatibility
-FROM multiarch/qemu-user-static:latest as qemu
+# Use a lightweight base image compatible with both CPU architectures
+FROM --platform=$BUILDPLATFORM python:3.10-slim-bullseye
 
-# Base lightweight Python image
-FROM python:3.9-slim
-
-# Copy QEMU emulators for multi-architecture support
-COPY --from=qemu /usr/bin/qemu-* /usr/bin/
-
-# Set environment variables for non-interactive installations
-ENV DEBIAN_FRONTEND=noninteractive
+# Set environment variables to avoid buffering and allow compatibility
+ENV PYTHONUNBUFFERED=1 \
+    DEBIAN_FRONTEND=noninteractive
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
     git \
-    binfmt-support \
- && apt-get clean \
- && rm -rf /var/lib/apt/lists/* \
- && update-binfmts --enable qemu-x86_64
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
-# Install EasyReg Standalone
-RUN git clone https://github.com/josephisaacturner/easyreg_standalone.git /easyreg_standalone \
- && pip install -e /easyreg_standalone
+# Set the working directory in the container
+WORKDIR /root
 
-# Install TensorFlow (compatible with TensorFlow 2.x, required by EasyReg)
-RUN pip install "tensorflow<3.0" \
- && python -c "import tensorflow as tf; print('TensorFlow version:', tf.__version__)"
+# Copy the entire project directory into the container
+COPY . /root
 
-# Set default command
-CMD ["bash"]
+# Install Python dependencies
+RUN pip install -r /root/requirements.txt  
+RUN pip install -e /root
+
+# Set the entrypoint to be customizable for running the package
+CMD ["ls", "/root"]
