--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,13 @@ version: "3.9"
 
 services:
   cat12-pipeline:
-    image: calvinwhow/vbm:cat12_latest # built with Dockerfile.easyreg
+    image: calvinwhow/vbm:latest # built with Dockerfile.easyreg
     container_name: cat12-pipeline
     environment:
       - THREADS=-1
     # ── adjust the two host paths as needed ──────────────────────────
     volumes:
-      - /Users/cu135/Partners HealthCare Dropbox/Calvin Howard/resources/datasets/Jung_TMS_AD/anat/pre_T1:/data  # /path/to/your/nifti/file:/root/data <-- Edit to provide files to warp
-      - /Users/cu135/Software_Local/DockerizedEasyReg/shell_scripts:/root/scripts
-    # Run once, then the container exits.
-    entrypoint: [ "bash", "/root/scripts/run_segmentation_easyreg.sh" ]         # set to your script of choice. 
+      - C:\Users\Calvin\Partners HealthCare Dropbox\Calvin Howard\studies\rimlf\test:/data  # /path/to/your/nifti/file:/root/data <-- Edit to provide files to warp
+      - C:\Users\Calvin\Documents\Software\vbm\src:/root/scripts
+    # Ensure the script has Unix line endings before execution.
+    entrypoint: [ "bash", "/root/run_chosen_script.sh", "run_segmentation" ]  # Pass the script name without .sh
